--- a/CSS/search.css
+++ b/CSS/search.css
@@ -88,6 +88,8 @@
     height: 0;	
     padding-bottom: 60%;
     margin-bottom: 7px;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .lecDesc {
     font-weight: bolder;
