--- a/CSS/index.css
+++ b/CSS/index.css
@@ -32,7 +32,7 @@
 /*강의 슬라이드*/
 .lecContainer {
     width: 100%;
-    height: 32vh;
+    height: 34.5vh;
 	overflow-x: hidden;
 	overflow-y: hidden;
 	margin-bottom: 20px;
@@ -55,6 +55,8 @@
 	width: 160px;
 	height: 104px;
 	margin-bottom: 7px;
+	background-size: contain;
+	background-repeat: no-repeat;
 }
 .lectStar {
     display: flex;
