--- a/CSS/myLecList.css
+++ b/CSS/myLecList.css
@@ -24,6 +24,8 @@
     height: 0;	
     padding-bottom: 60%;
     margin-bottom: 7px;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .lecDesc {
     font-weight: bolder;
