--- a/CSS/chat.css
+++ b/CSS/chat.css
@@ -1,8 +1,58 @@
+.header {
+    flex-direction: column;
+    height: 14vh;
+    background-color: white;
+    color: black;
+}
+
+.titleCon {
+    width: 100%;
+    height: 65%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background-color: rgb(32, 211, 175);
+    color: white;
+}
+
 .arrow {
     position: absolute;
     height: 40%;
     width: auto;
     left: 10px;
+}
+
+.options {
+    display: flex;
+    position: relative;
+    height: 35%;
+    width: 100%;
+    color: rgb(152, 152, 152);
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    font-weight: bolder;
+}
+
+.option1 {
+    position: absolute;
+    left: 20%;
+    top: 25%;
+}
+
+.option2 {
+    position: absolute;
+    right: 20%;
+    top: 25%;
+}
+
+.primary {
+    margin-top: 14vh;
+    margin-bottom: 66px;
+}
+
+.actBorderBot {
+    color:black;
 }
 
 .chatContainer {
@@ -48,3 +98,5 @@
     color: gray;
     padding-top: 2px;
 }
+
+
